# StarlaneCourier

./: AGENTS.md  Cargo.toml  README.md  settings.json
src/: agent.rs  app.rs  llm.rs  main.rs  save.rs  settings.rs  ui.rs
src/game/: contracts.rs  fuel.rs  mod.rs  outcome.rs  routing.rs  ships.rs  types.rs
