[package]
name = "starlane-courier"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
